[package]
name = "brdgme-std"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
combine = "=2.1.2"
diesel = "=0.12.0"
diesel_codegen = "=0.12.0"
# stdx
serde = "=0.9.5"
serde_json = "=0.9.4"
serde_derive = "=0.9.5"
chrono = "=0.2.25"
rand = "=0.3.15"
regex = "=0.2.1"
lazy_static = "=0.2.2"
error-chain = "=0.8.1"
